--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="right-top-side">
                 <div class="first-section">
                     <img src="/assets/Right section/Avatar/james-owen-ZaU21K_4ZpA-unsplash.jpg" alt="Avatar" class="avatar">
-                    <h5 class="username">UserName <span class="active-status"><br><img src="/assets/Right section/Chat/Ellipse.svg" alt="Green Elpise" class="elipse">  online</span> </h5>
+                    <h5 class="username">RegisSaffi <span class="active-status"><br><img src="/assets/Right section/Chat/Ellipse.svg" alt="Green Elpise" class="elipse">  online</span> </h5>
                 </div>
                 <div class="icons">
                     <img src="/assets/Right section/Chat/F3.svg" alt="Video Call icon" class="icon icon-one">
